--- a/game/overworld.css
+++ b/game/overworld.css
@@ -1,22 +1,33 @@
 @font-face {
   font-family: "PixelifySans";
-  src: url("assets/font/PixelifySans-Regular.ttf") format("truetype");
+  src: url("../assets/font/PixelifySans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
+  font-family: "PixelifySans";
   margin: 0;
   padding: 0;
   height: 100vh;
   background: url("../assets/overworld.png") no-repeat center center fixed;
   background-size: cover;
-
-
 }
+
+img {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 #title-container {
-  position: relative; /* allow text to overlay the image */
-  width: 400px; /* same as image width */
-  margin: 10px auto 0 auto; /* horizontally center container */
-  text-align: center; /* center children */
+  position: relative;
+  /* allow text to overlay the image */
+  width: 400px;
+  /* same as image width */
+  margin: 10px auto 0 auto;
+  /* horizontally center container */
+  text-align: center;
+  /* center children */
 }
