--- a/game/styles/blessing.css
+++ b/game/styles/blessing.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "PixelifySans";
-    src: url("../assets/font/PixelifySans-Regular.ttf") format("truetype");
+    src: url("../../assets/font/PixelifySans-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -9,7 +9,7 @@ body {
     font-family: "PixelifySans", sans-serif;
     margin: 0;
     padding: 0;
-    background: url("../assets/blessing.gif") no-repeat center center fixed;
+    background: url("../../assets/blessing.gif") no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
