--- a/game/styles/overworld.css
+++ b/game/styles/overworld.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "PixelifySans";
-  src: url("../assets/font/PixelifySans-Regular.ttf") format("truetype");
+  src: url("../../assets/font/PixelifySans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -9,7 +9,7 @@ body {
   font-family: "PixelifySans", sans-serif;
   margin: 0;
   padding: 0;
-  background: url("../assets/overworld.png") no-repeat center center fixed;
+  background: url("../../assets/overworld.png") no-repeat center center fixed;
   background-size: cover;
 
   /* apply to entire page */
